--- a/backend/templates/includes/header.html.twig
+++ b/backend/templates/includes/header.html.twig
@@ -1,6 +1,9 @@
 <a class="btn btn-warning" href="/voyages">Voyages</a>
 <a class="btn btn-warning" href="/categories">Categories</a>
 <a class="btn btn-warning" href="/destinations">Destinations</a>
+<a class="btn btn-warning" href="/reservations">Réservations</a>
+<a class="btn btn-warning" href="/statuts">Statuts</a>
+<a class="btn btn-warning" href="/contacts">Contacts</a>
 <a class="btn btn-warning" href="/users">Users</a>
 <a class="btn btn-warning" href="/logout">Deconexion</a>
 
